<resources>
    <string name="app_name">PDD</string>
    <string name="activity_splash_text_view">test PDD</string>
    <string name="activity_login_text_view_login">login:</string>
    <string name="activity_login_edit_text_login">input user name</string>
    <string name="activity_login_text_view_password">Password:</string>
    <string name="activity_login_edit_text_password">input password</string>
    <string name="activity_login_button_signin">Sign in</string>
    <string name="activity_login_button_signup">Sing Up</string>
    <string name="activity_login_check_box">remember user</string>
    <string name="activity_login_label">Autorisation</string>
    <string name="activity_signup_label">sign up</string>
    <string name="activity_signup_text_view_fio">Name</string>
    <string name="activity_signup_text_view_login">login:</string>
    <string name="activity_signup_edit_text_login">input user name</string>
    <string name="activity_signup_text_view_password">Password:</string>
    <string name="activity_signup_edit_text_password">input password</string>
    <string name="activity_signup_text_view_repassword">RePassword:</string>
    <string name="activity_signup_edit_text_repassword">input password</string>
    <string name="activity_signup_edit_text_fio">input name, first name</string>
    <string name="activity_signup_button_ok">ok</string>
    <string name="activity_signup_button_back">&lt;</string>
    <string name="activity_singup_dialog_button_ok">ok</string>
    <string name="activity_signup_dialog_message_name">input name!</string>
    <string name="activity_signup_dialog_message_login">input login!</string>
    <string name="activity_signup_dialog_message_password">input password!</string>
    <string name="activity_signup_dialog_message_repassword">input repassword!</string>
    <string name="activity_signup_dialog_message_wrong_password">The passwords are different</string>
    <string name="activity_login_error_login">incorrect login or password</string>
    <string name="activity_main_button_courses">courses</string>
    <string name="activity_main_button_exam">exam</string>
    <string name="activity_main_button_reports">reports</string>
    <string-array name="courses_array">
        <item>1~Курс 1~Описание курса 1</item>
        <item>2~Курс 2~Описание курса 2</item>
        <item>3~Курс 3~Описание курса 3</item>
        <item>4~Курс 4~Описание курса 4</item>
        <item>5~Курс 5~Описание курса 5</item>
        <item>6~Курс 6~Описание курса 6</item>
        <item>7~Курс 7~Описание курса 7</item>
        <item>8~Курс 8~Описание курса 8</item>
        <item>9~Курс 9~Описание курса 9</item>
        <item>10~Курс 10~Описание курса 10</item>
        <item>11~Курс 11~Описание курса 11</item>
    </string-array>

    <string-array name="tests_array">
        <item>На какой сигнал светофора можно начитать движение на перекрестке?</item>
        <item>С какой максимальной скоростью разрешается движение водителю легкового автомобиля после проезда перекрестка?</item>
        <item>С какой максимальной скоростью разрешается движение мотоцикла на автомагистрали, если его водитель имеет водительский стаж 3 года?</item>
        <item>С какой максимальной скоростью разрешается движение легковому автомобилю в населенном пункте, обозначенном этим знаком?</item>
        <item>Водителю какого транспортного средства разрешается движение со скоростью 90 км/ч на этом участке дороги?</item>
        <item>Водитель какого транспортного средства не нарушает Правила, двигаясь со скоростью 20 км/ч?</item>
        <item>В этом случае максимальная скорость движения грузового автомобиля не должна превышать:</item>
        <item>С какой максимальной скоростью разрешается продолжить движение водителю легкового автомобиля после проезда этого дорожного знака?</item>
        <item>С какой максимальной скоростью разрешается движение водителю грузового автомобиля на этом участке дороги?</item>
        <item>С какой максимальной скоростью разрешается буксировка механическим транспортным средством?</item>
        <item>Водители каких транспортных средств нарушают Правила, двигаясь со скоростью 90 км/ч?</item>
        <item>С какой максимальной скоростью разрешается движение, водителю микроавтобуса в этом случае?</item>
        <item>Разрешается ли водителю автобуса междугородного сообщения двигаться со скоростью более 90 км/ч на этом участке дороги?</item>
        <item>На каком участке дороги водителю мотоцикла запрещается движение со скоростью 80 км/ч?</item>
        <item>С какой скоростью разрешается движение грузового автомобиля на этом участке дороги?</item>
        <item>Водителю какого транспортного средства разрешается превышать установленные Правилами ограничения скорости движения?</item>
    </string-array>

    <string-array name="answer0_array">
        <item>На желтый</item>
        <item>На красный</item>
        <item>На зеленый</item>
        <item>На любой</item>
    </string-array>

    <integer-array name="answer0_true_array">
        <item>2</item>
    </integer-array>

    <string-array name="answer1_array">
        <item>60 км/ч.</item>
        <item>70 км/ч.</item>
        <item>80 км/ч.</item>
        <item>90 км/ч.</item>
        <item>С любой скоростью, обеспечивающей безопасность дорожного движения.</item>

    </string-array>

    <integer-array name="answer1_true_array">
        <item>3</item>
    </integer-array>

    <string-array name="answer2_array">
        <item>70 км/ч</item>
        <item>80 км/ч</item>
        <item>90 км/ч</item>
        <item>110 км/ч</item>
        <item>130 км/ч</item>
    </string-array>

    <integer-array name="answer2_true_array">
        <item>1</item>
    </integer-array>

    <string-array name="answer3_array">
        <item>20 км/ч.</item>
        <item>40 км/ч.</item>
        <item>60 км/ч.</item>
        <item>90 км/ч.</item>

    </string-array>

    <integer-array name="answer3_true_array">
        <item>2</item>
    </integer-array>

    <string-array name="answer4_array">
        <item>Мотоцикла.</item>
        <item>Микроавтобуса.</item>
        <item>Обоим разрешается.</item>
        <item>Обоим запрещается.</item>
    </string-array>

    <integer-array name="answer4_true_array">
        <item>1</item>
    </integer-array>

    <string-array name="answer5_array">
        <item>Только автомобиля, обслуживающего предприятие связи.</item>
        <item>Только автомобиля дорожной службы.</item>
        <item>Оба нарушают.</item>
        <item>Оба не нарушают.</item>
    </string-array>

    <integer-array name="answer5_true_array">
        <item>3</item>
    </integer-array>

    <string-array name="answer6_array">
        <item>60 км/ч.</item>
        <item>70 км/ч.</item>
        <item>80 км/ч.</item>
        <item>90 км/ч.</item>
        <item>100 км/ч.</item>

    </string-array>

    <integer-array name="answer6_true_array">
        <item>0</item>
    </integer-array>

    <string-array name="answer7_array">
        <item>60 км/ч.</item>
        <item>70 км/ч.</item>
        <item>80 км/ч.</item>
        <item>90 км/ч.</item>
        <item>100 км/ч.</item>
    </string-array>

    <integer-array name="answer7_true_array">
        <item>3</item>
    </integer-array>

    <string-array name="answer8_array">
        <item>70 км/ч.</item>
        <item>90 км/ч.</item>
        <item>100 км/ч.</item>

    </string-array>

    <integer-array name="answer8_true_array">
        <item>0</item>
    </integer-array>

    <string-array name="answer9_array">
        <item>30 км/ч.</item>
        <item>40 км/ч.</item>
        <item>50 км/ч.</item>
        <item>60 км/ч.</item>
        <item>70 км/ч.</item>

    </string-array>

    <integer-array name="answer9_true_array">
        <item>2</item>
    </integer-array>

    <string-array name="answer10_array">
        <item>Только микроавтобуса.</item>
        <item>Только мотоцикла с боковым прицепом.</item>
        <item>Обоих мотоциклов.</item>
        <item>Микроавтобуса и мотоцикла без бокового прицепа.</item>

    </string-array>

    <integer-array name="answer10_true_array">
        <item>2</item>
    </integer-array>

    <string-array name="answer11_array">
        <item>80 км/ч.</item>
        <item>70 км/ч.</item>
        <item>60 км/ч.</item>
        <item>С любой скоростью.</item>

    </string-array>

    <integer-array name="answer11_true_array">
        <item>2</item>
    </integer-array>

    <string-array name="answer12_array">
        <item>Разрешается.</item>
        <item>Запрещается.</item>

    </string-array>

    <integer-array name="answer12_true_array">
        <item>1</item>
    </integer-array>

    <string-array name="answer13_array">
        <item>Только на "Б".</item>
        <item>Только на "А".</item>
        <item>На "А" и "Б".</item>

    </string-array>

    <integer-array name="answer13_true_array">
        <item>2</item>
    </integer-array>

    <string-array name="answer14_array">
        <item>Только не более 50 км/ч.</item>
        <item>Только 50 км/ч.</item>
        <item>Не более 90 км/ч.</item>
    </string-array>

    <integer-array name="answer14_true_array">
        <item>2</item>
    </integer-array>

    <string-array name="answer15_array">
        <item>Только водителю автомобиля скорой медицинской помощи.</item>
        <item>Только водителю автомобиля дорожной службы.</item>
        <item>Водителям обоих транспортных средств.</item>
    </string-array>

    <integer-array name="answer15_true_array">
        <item>0</item>
    </integer-array>

    <string name="fragment_course_detail_text_view_head">course description</string>
    <string name="activity_test_button_ok">test complite</string>
    <string name="test_activity_not_complete">not all</string>
    <string name="activity_result_exam_text_view_finish">Congratulation.</string>
    <string name="activity_result_exam_text_view_count_questions">count question:</string>
    <string name="activity_result_exam_text_view_count_true_answers">count true answers:</string>
    <string name="activity_result_exam_text_view_percent_true_answers">% true answers:</string>
    <string name="activity_result_exam_button_close">close</string>

</resources>
