<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <Button
            android:id="@+id/activity_signup_button_back"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/activity_signup_button_back"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textSize="20sp"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/activity_signup_text_view_fio"
                />

            <EditText
                android:id="@+id/activity_signup_edit_text_fio"
                android:textSize="20sp"
                android:hint="@string/activity_signup_edit_text_fio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="10dp">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textSize="20sp"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/activity_signup_text_view_login"
                />

            <EditText
                android:id="@+id/activity_signup_edit_text_login"
                android:textSize="20sp"
                android:hint="@string/activity_signup_edit_text_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="10dp">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textSize="20sp"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/activity_signup_text_view_password"
                />

            <EditText
                android:id="@+id/activity_signup_edit_text_password"
                android:textSize="20sp"
                android:hint="@string/activity_signup_edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="10dp">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textSize="20sp"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/activity_signup_text_view_repassword"
                />

            <EditText
                android:id="@+id/activity_signup_edit_text_repassword"
                android:textSize="20sp"
                android:hint="@string/activity_signup_edit_text_repassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="10dp">
        </LinearLayout>

        <Button
            android:id="@+id/activity_signup_button_ok"
            android:textSize="20sp"
            android:text="@string/activity_signup_button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>