<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20sp"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/activity_login_linear_layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/activity_login_text_view_login"
            android:textSize="20dp"
            android:layout_width="90dp"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="10dp"
            android:layout_height="wrap_content">

        </LinearLayout>

        <EditText
            android:id="@+id/activity_login_edit_text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:hint="@string/activity_login_edit_text_login"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="10dp">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_login_linear_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/activity_login_text_view_password"
            android:textSize="20dp"
            android:layout_width="90dp"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="10dp"
            android:layout_height="wrap_content">

        </LinearLayout>

        <EditText
            android:id="@+id/activity_login_edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:hint="@string/activity_login_edit_text_password"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="10dp">

    </LinearLayout>

    <CheckBox
        android:id="@+id/activity_login_check_box"
        android:textSize="20dp"
        android:text="@string/activity_login_check_box"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="10dp">

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <Button
        android:id="@+id/activity_login_button_signin"
        android:textSize="20dp"
        android:text="@string/activity_login_button_signin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="10dp">

    </LinearLayout>

    <Button
        android:id="@+id/activity_login_button_signup"
        android:textSize="20dp"
        android:text="@string/activity_login_button_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>