<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:gravity="center">

    <Button
        android:id="@+id/activity_main_button_courses"
        android:textSize="20sp"
        android:text="@string/activity_main_button_courses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
    </LinearLayout>

    <Button
        android:id="@+id/activity_main_button_exam"
        android:textSize="20sp"
        android:text="@string/activity_main_button_exam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
    </LinearLayout>

    <Button
        android:id="@+id/activity_main_button_reports"
        android:textSize="20sp"
        android:text="@string/activity_main_button_reports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
    </LinearLayout>

</LinearLayout>
